# Flow

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  TEST_ALL.sh  astro.config.mjs  build.gradle.kts  index.js  package-lock.json  package.json  settings.gradle.kts  test_websocket.py  tsconfig.json
.github/: WORKFLOW_BADGES.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  automated-build.yml  backend-build.yml  build-packages.yml  build.yml  ci.yml  codeql.yml  deploy.yml  frontend-build.yml  manual-build.yml  nightly.yml  pages.yml  plugin-build.yml  pr-check.yml  quick-build.yml  release.yml  stale.yml  windows-build.yml
app/: build.gradle.kts
app/lang/: build.gradle.kts
cloudflare/: workers.js
common/: build.gradle.kts
flow/: build.gradle.kts
flow/data/: flow.db
flow_frontend/: .flutter-plugins-dependencies  README.md  pubspec.yaml  simple_test.flowlang  test_flowlang.flowlang
flow_frontend/assets/: node_templates.json
flow_frontend/lang/: debug_class.flowlang
flow_frontend/lib/: main.dart  websocket_test.dart
flow_frontend/linux/: CMakeLists.txt
flow_frontend/test/: widget_test.dart
flow_frontend/web/: index.html  manifest.json
flow_frontend/windows/: CMakeLists.txt
flowbase/: .gitignore  CMakeLists.txt  DYNAMIC_REFLECTION.md  README.md  build.sh  lsp_main.cpp  main.cpp  out
flowbase/examples/: bitwise_comprehensive.flow  bitwise_flags.flow  bitwise_ops.flow  bitwise_shifts.flow  c_interop_advanced.flow  c_interop_test.flow  for_loops.flow  functions.flow  go_interop.flow  hello.flow  inline_code.flow  javascript_interop.flow  lambda_as_parameter.flow  lambda_basic.flow  lambda_callback.flow  lambda_callback_working.flow  lambda_param_simple.flow  lambda_simple.flow  multi_language_interop.flow  mutability.flow  optional_types.flow  python_interop.flow  rust_interop.flow  simple_math.flow  struct_methods_basic.flow  struct_methods_params.flow  struct_methods_return.flow  struct_methods_simple.flow  structs.flow  test_lsp_lambda.flow  test_lsp_reflection.flow  variables.flow  variadic_test.flow
flowbase/include/AST/: AST.h
flowbase/include/Codegen/: CodeGenerator.h
flowbase/include/Common/: ErrorReporter.h
flowbase/include/Driver/: Driver.h  MultiFileBuilder.h
flowbase/include/Embedding/: FlowAPI.h
flowbase/include/LSP/: LSPErrorCollector.h  LanguageServer.h
flowbase/include/Lexer/: Lexer.h  Token.h
flowbase/include/Parser/: Parser.h
flowbase/include/Runtime/: FFIBridge.h  ForeignModuleLoader.h  IPC.h  Interop.h  JVMInterop.h  ReflectionManager.h
flowbase/include/Sema/: SemanticAnalyzer.h
flowbase/include/Stdlib/: Builtins.h
flowbase/src/AST/: AST.cpp
flowbase/src/Codegen/: CodeGenerator.cpp
flowbase/src/Common/: ErrorReporter.cpp
flowbase/src/Driver/: Driver.cpp  MultiFileBuilder.cpp
flowbase/src/Embedding/: FlowAPI.cpp  FlowJNI.cpp
flowbase/src/LSP/: LanguageServer.cpp
flowbase/src/Lexer/: Lexer.cpp  Token.cpp
flowbase/src/Parser/: Parser.cpp
flowbase/src/Runtime/: FFIBridge.cpp  ForeignModuleLoader.cpp  IPC.cpp  Interop.cpp  JVMInterop.cpp  ReflectionManager.cpp
flowbase/src/Sema/: SemanticAnalyzer.cpp
flowbase/src/Stdlib/: Builtins.cpp
flowvscode/: .gitignore  .vscode-test.mjs  README.md  language-configuration.json  package-lock.json  package.json  setup.sh  tsconfig.json  webpack.config.js
flowvscode/icons/: flow-icon-theme.json
flowvscode/src/: extension.ts
flowvscode/syntaxes/: flow.tmLanguage.json
flowvscode/test-fixtures/: .gitkeep
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  vite.config.ts
frontend/public/: CNAME  manifest.json  robots.txt  sitemap.xml
frontend/src/: App.svelte  app.css  main.ts
gradle/wrapper/: gradle-wrapper.properties
interop/c/: Makefile  flow.c  flow.h  flow_reflect.c  flow_reflect.h  test.c  test_module.flow  test_reflection  test_reflection.c
interop/go/: flow.go  flow_test.go  go.mod  reflection_test.go
interop/java/: DirectTest.java  Example.java  JAVA_COMPLETE.md  JAVA_STATUS.md  LibraryPathTest.java  QuickTest.java  QuickTest2.java  TestReflectionManual.java  com_flowlang_bindings_FlowModule.h  flow_jni.cpp  gradlew
interop/javascript/: index.d.ts  index.js  package-lock.json  package.json  test_reflection.js
interop/php/: composer.json  test_reflection.php
interop/python/: setup.py  test_reflection.py
interop/ruby/: flow.gemspec  test_reflection.rb
interop/rust/: Cargo.toml  build.rs
interop/rust/examples/: basic.rs  error_handling.rs  file_loading.rs
interop/rust/src/: lib.rs
interop/rust/tests/: integration_test.rs  reflection_tests.rs
javabindings/: .gitignore  README.md  build.gradle  settings.gradle
lake/: .gitignore  README.md  lake  lake-init  lake-init.ps1
lang/: build.gradle.kts
lang/testFlowLang/: test1.flowlang  test3_enhanced_features.flowlang  test_simple_types.flowlang
plugin/: build.gradle.kts  settings.gradle.kts
registry-server/: .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go  test-download.sh
registry-server/config/: config.go
registry-server/handlers/: handlers.go
registry-server/middleware/: auth.go  ratelimit.go  security.go
registry-server/models/: models.go
registry-server/scripts/: seed.go  test-api.sh
river/: .river.example.toml  ANIMATIONS_COMPLETE.md  CLOUD_REGISTRY_SKELETON.md  Cargo.toml  README.md  build.sh
river/src/: builder.rs  cli.rs  config.rs  main.rs  manifest.rs  package.rs  registry.rs  resolver.rs  utils.rs
river/src/commands/: add.rs  build.rs  clean.rs  flow_manager.rs  init.rs  install.rs  list.rs  login.rs  mod.rs  publish.rs  remove.rs  run.rs  search.rs  update.rs
test-packages/: RIVER_TEST.sh  RIVER_TEST_CLEAN.sh
test-packages/c-math/: River.toml
test-packages/calculator/: River.toml
test-packages/calculator-improved/: River.toml
test-packages/hello-world/: River.toml
test-packages/import-test/: River.toml
webserver/: README.md  build.gradle.kts
(+337 files in other folders)
