[package]
name = "river"
version = "0.1.0"
edition = "2021"
authors = ["Flow Team"]
description = "Package manager for the Flow programming language"

[[bin]]
name = "river"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.0"
walkdir = "2.4"
semver = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
dirs = "5.0"
indicatif = "0.17"
console = "0.15"
which = "4.4"

[lints.rust]
unused_variables = "allow"
dead_code = "allow"

